# djinn-lib

./: .gitignore  README.md  cabal.project  djinn-lib.cabal
djinn-ghc/: LICENSE  djinn-ghc.cabal
djinn-ghc/src/Djinn/: GHC.hs
djinn-lib/: djinn-lib.cabal
djinn-lib/src/Djinn/: HCheck.hs  HTypes.hs  LJT.hs  LJTFormula.hs
src/Djinn/: HCheck.hs  HTypes.hs  LJT.hs  LJTFormula.hs
