name:           djinn-ghc
version:        0.0.1
synopsis:       Generate Haskell code from a type. Bridge from Djinn to GHC API.
description:    Djinn uses an theorem prover for intuitionistic propositional logic
                to generate a Haskell expression when given a type.
                This is the bridge from djinn-lib to GHC API.
license:        BSD3
license-file:   LICENSE
author:         Alejandro Serrano
maintainer:     trupill@gmail.com   
category:       Language
build-type:     Simple
cabal-version:  >=1.8

library
  -- exposed-modules:  
  build-depends:    base >= 4 && < 5,
                    ghc
  hs-source-dirs:   src
